<resources>
    <string name="app_name">Hospital Health</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_nearby_places">Map</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Reminder</string>
    <string name="title_notifications">Map</string>
    <string name="name_hint_add">Remind me to...</string>
    <string name="tv_time_date_add">Set Time and Date:</string>
    <string name="notes_hint_add">Notes (optional)</string>
    <string name="btn_set_location">Set Location</string>
    <string name="HealthLine_url">https://www.healthline.com</string>
    <string name="dialog_name_default">NAME</string>
    <string name="dialog_datetime_default">Date and Time:</string>
    <string name="dialog_details_default">Details:</string>
    <string name="dialog_location_default">Location:</string>
    <string name="reminder_name">REMINDER NAME</string>
    <string name="reminder_location">Location</string>
    <string name="reminder_time">Time</string>
    <string name="btn_delete">Delete</string>
    <string name="toast_invalid_datetime">Invalid date and time</string>
    <string name="toast_set_location_not_successful">Please click on a hospital in the HospitalMapView to save location
        data
    </string>
    <string name="error_required_input">Required input</string>
    <string name="error_valid_url">Please enter a valid URL</string>
    <string name="tag_details_dialog">DETAILSDIALOG</string>
    <string name="throwable_interface_not_implemented">The Activity is not implementing the ShoppingItemHandler
        interface
    </string>
    <string name="details_dialog_title">Details</string>
    <string name="btn_ok">OK</string>
    <string name="location_not_specified">Location not specified</string>
    <string name="toast_location_saved">Location saved</string>
    <string name="toast_location_set">Location set to %1$s</string>

    <string name="dialog_datetime">Date and Time: </string>
    <string name="dialog_details">Details: %1$s</string>
    <string name="dialog_location">Location: %1$s</string>
    
    <string name="map_marker_info">(%2$d m away) %1$s</string>
    <string name="label_coordinate">COORDINATE</string>
    <string name="location_permission_needed">Location permission is needed for this functionality</string>
    <string name="location_perm_granted">LOCATION permission granted</string>
    <string name="location_perm_not_granted">LOCATION permission NOT granted</string>

    <string name="toast_category">%1$s was selected</string>
    <string name="location_picker_mode">Location Picker Mode</string>
    <string name="btn_cancel">Back</string>
</resources>
