<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_view"
        android:theme="@style/CardView.Light"
        android:paddingBottom="10dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        card_view:cardElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <TextView
                android:text="@string/reminder_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvNameReminder"
                android:layout_marginTop="8dp"
                card_view:layout_constraintTop_toTopOf="parent" android:textSize="18sp"
                card_view:layout_constraintStart_toEndOf="@+id/cbDone" android:layout_marginStart="16dp"
                android:textColor="#E91F1414"/>
        <TextView
                android:text="@string/reminder_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvLocation"
                android:textSize="12sp"
                android:textColor="#88000000" card_view:layout_constraintStart_toEndOf="@+id/cbDone"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp" card_view:layout_constraintTop_toBottomOf="@+id/tvNameReminder"
                android:layout_marginBottom="8dp" card_view:layout_constraintBottom_toTopOf="@+id/tvTime"/>
        <TextView
                android:text="@string/reminder_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvTime"
                android:textSize="12sp" android:textColor="#88000000"
                card_view:layout_constraintStart_toEndOf="@+id/cbDone" android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                card_view:layout_constraintBottom_toTopOf="@+id/guideline"
        />
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbDone" card_view:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                card_view:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp" card_view:layout_constraintBottom_toTopOf="@+id/guideline"/>
        <Button
                android:text="@string/btn_delete"
                android:layout_width="67dp"
                android:layout_height="35dp"
                android:id="@+id/btnDelete" android:layout_marginTop="8dp"
                card_view:layout_constraintTop_toTopOf="@+id/guideline" card_view:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
                card_view:layout_constraintBottom_toBottomOf="parent" android:textSize="12sp"
                android:background="@drawable/btn_rounded_outline" android:textColor="#D85470"/>
        <androidx.constraintlayout.widget.Guideline
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" card_view:layout_constraintGuide_begin="86dp"
                android:id="@+id/guideline"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>


