<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".AddReminderActivity">

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etName" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:hint="@string/name_hint_add"/>

            <TextView
                    android:text="@string/tv_time_date_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/etName" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:textSize="20sp" android:textStyle="bold"
                    android:textColor="#D85470"/>

            <TimePicker
                    android:id="@+id/timePicker"
                    android:timePickerMode="spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"/>

            <DatePicker
                    android:id="@+id/datePicker"
                    android:datePickerMode="spinner"
                    android:calendarViewShown="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/timePicker" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="8dp"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:gravity="start|top"
                    android:ems="10"
                    android:id="@+id/etDetails" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/datePicker" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:hint="@string/notes_hint_add"/>
            <Button
                    android:text="@android:string/ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnOk" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/etDetails"
                    android:background="@drawable/btn_rounded_outline" android:textColor="#D85470"/>
            <Button
                    android:text="@android:string/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnCancel" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/etDetails"
                    android:background="@drawable/btn_rounded_outline" android:textColor="#D85470"/>
            <Button
                    android:text="@string/btn_set_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSetLocation" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/etDetails"
                    app:layout_constraintStart_toEndOf="@+id/btnCancel" android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/btnOk" android:layout_marginEnd="8dp"
                    android:background="@drawable/btn_rounded_outline" android:textColor="#D85470"
                    android:paddingLeft="16dp" android:paddingRight="16dp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
